# nprog_project

./: CMakeLists.txt  README.md  cpu.cpp  cpu.h  cpu_info.cpp  functions.cpp  main.cpp  memory_info.cpp  memory_info.h
include/: cpu.h  cpu_info.h  cpu_info_exception.h  cpusniffer.h  functions.h  mainwindow.h  memory_info.h
src/: cpu.cpp  cpu_info.cpp  cpusniffer.cpp  functions.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  memory_info.cpp
src/charts/: grid.cpp  grid.h  waveform.cpp  waveform.h  waveformlegend.cpp  waveformlegend.h
